[tool.poetry]
name = "elst"
version = "0.1.0"
description = ""
authors = ["zhangpeng <zhangpeng@papayamobile.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch8 = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
